--- a/equals.template
+++ b/equals.template
@@ -15,9 +15,9 @@ Object $paramName){
      #set($i = $i + 1)
      #if ($field.primitive)
          #if ($field.double || $field.float)
-           #addDoubleFieldComparisonConditionDirect($field) ##
+           this.#addDoubleFieldComparisonConditionDirect($field) ##
          #else
-           #addPrimitiveFieldComparisonConditionDirect($field) ##
+           this.#addPrimitiveFieldComparisonConditionDirect($field) ##
          #end
       #elseif ($field.enum)
          #addPrimitiveFieldComparisonConditionDirect($field) ##
